--- a/style.css
+++ b/style.css
@@ -23,11 +23,77 @@ img {
   max-inline-size: 100%;
 }
 
-.container .board{
-    display: grid;
-    grid-template-columns: repeat(3,60px);
-    button {
-        height: 60px;
-        width: 60px;
-    }
+html, body{
+  height: 100%;
+  width: 100%;
+  background-color: #f1f5f9;
+  color: #164e63;
+}
+
+.container{
+  display: grid;
+  grid-template-columns: 1fr;
+  justify-items: center;
+}
+
+.title{
+  font-size: 35px;
+  font-weight: bold;
+  padding: 30px;
+}
+
+.turn{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding-bottom: 30px;
+  gap: 30px;
+  button {
+    background-color: #475569;
+    border: none;
+    width: 90px;
+    height: 30px;
+    font-size: 20px;
+    font-weight: bold;
+    color: #c7c7c7;
+    cursor: pointer;
+    border-radius: 5px;
+  }
+  button:hover {
+  background: #c7c7c7;
+  color: #475569;
+  }
+}
+
+.text{
+  padding: 5px;
+  align-items: center;
+  font-size: 28px;
+  font-weight: 600;
+}
+
+.board{
+  display: grid;
+  justify-content: center;
+  grid-template-columns: repeat(3,70px);
+  gap: 5px;
+  button {
+    background-color: #c7c7c7;
+    border: none;
+    width: 70px;
+    height: 70px;
+    font-size: 40px;
+    font-weight: bold;
+    color: #475569;
+    cursor: pointer;
+    border-radius: 5px;
+  }
+  button:hover {
+  background: #475569;
+  color: #c7c7c7;
+  }
+}
+.cell{
+  height: 70px;
+  width: 70px;
 }
